add the api key for openrouter

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ NEXT_PUBLIC_THIRDWEB_CLIENT_ID=your_client_id_here
 THIRDWEB_SECRET_KEY=your_secret_key_here
 THIRDWEB_SERVER_WALLET_ADDRESS=0x0000000000000000000000000000000000000000
 MERCHANT_WALLET_ADDRESS=0x0000000000000000000000000000000000000000
+
+# OpenRouter API Key for AI Chat features
+OPENROUTER_API_KEY=
