--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "~1.2.4",
     "class-variance-authority": "~0.7.1",
     "clsx": "~2.1.1",
+    "ethers": "^6.16.0",
     "lucide-react": "~0.552.0",
     "next": "~16.0.7",
     "react": "~19.2.1",
